...
    <string name="ttsMatchWin"> wins the Match!</string>
    <string name="ttsReadyServe"> Serve </string>
    <string name="ttsServe">Serve </string>
    <string name="ttsTo"> to </string>

    <!-- MatchInit Fragment -->
    <string name="miTitle">Connecting With Tracker</string>
    <string name="miSubTitle">scan the QR code with the tracker device</string>
    <string name="miConnectedTitle">Connected With Tracker</string>
    <string name="miConnectedSubTitle">click on the button to take a picture of the table with the tracker device</string>
    <string name="miPictureLoadingSubTitle">the image of the table is being transmitted</string>
    <string name="miTakePicture">Take Picture</string>

    <!-- MatchSettings Fragment -->
    <string name="msTitle">Match Settings</string>
    <string name="msType">Choose Match Length</string>
    <string name="msServer">Choose Server</string>
...
    <string name="mwStartNew">Play another Match</string>
    <string name="mwStats">Show Stats</string>
    <string name="mwMenu">Main Menu</string>
    <string name="mwWon">\u0020won!</string>

    <!-- MatchScore Fragment -->
    <string name="msInitialValue">00</string>
    <string name="msDivider">:</string>
    <string name="msDialogTitle">%1$s won the match!</string>
    <string name="msDialogMsg">Do you want to continue or replay the last point?</string>
    <string name="msDialogContinue">Continue</string>
    <string name="msDialogReplay">Replay</string>

    <!-- MatchStats Fragment -->
    <string name="mstTitle">Match Stats</string>
...
    <string name="connectMessage">Confirm the code matches on both devices:\n</string>
    <string name="disconnectTitle">Lost connection to other device</string>
    <string name="disconnectMessage">Please set up a new connection</string>
    <string name="connectConfirm">Confirm</string>
    <string name="connectReject">Reject</string>
    <string name="connectTrackerSearching">Setup the display device and wait for a connection…</string>
    <string name="connectDisplaySearching">Setup the tracker device and wait for a connection…</string>
    <string name="connectConnecting">Connecting with %1$s…</string>
    <string name="connectDisconnect">Lost connection with remote device. Try again!</string>
    <string name="connectRejection">The connection was rejected. Try again!</string>
    <string name="connectDiscoverFailure">Search failed. Try again!</string>
    <string name="connectPicture">Waiting for the display to take a picture…</string>

...
