<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:columnCount="1"
        android:rowCount="4">

        <TextView
            android:id="@+id/miTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/miTitle"
            android:textAlignment="center"
            android:textColor="@color/primary_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/miSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:paddingBottom="40dp"
            android:text="@string/miSubTitle"
            android:textAlignment="center"
            android:textColor="@color/primary_light"
            android:textSize="18sp"
            android:textStyle="normal" />
        <ImageView
            android:id="@+id/qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/primary_light"
            android:elevation="8dp"
            />
        <Button
            android:id="@+id/miPictureBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@drawable/radius_background"
            android:backgroundTint="@android:color/secondary_text_light"
            android:layout_marginTop="20dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:paddingStart="72dp"
            android:paddingEnd="72dp"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:elevation="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/miTakePicture"
            android:textColor="#fff"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:padding="8dp" />
        <LinearLayout
            android:id="@+id/display_loading"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="250dp"
            android:orientation="vertical"
            android:visibility="gone">
            <include
                layout="@layout/loading_bar"/>
        </LinearLayout>
    </GridLayout>
</RelativeLayout>