...
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.otaliastudios.zoom.ZoomLayout
        android:id="@+id/init_zoomLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical|horizontal"
        android:fitsSystemWindows="true"
        android:longClickable="true"
        app:alignment="center"
...
    </com.otaliastudios.zoom.ZoomLayout>
    <SurfaceView
        android:id="@+id/init_cornerSurface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ImageButton
        android:id="@+id/init_revertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/primary_dark"
        android:tint="@color/primary_light"
...
        android:padding="8dp"
        android:src="@drawable/undo"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>
    <include layout="@layout/corner_selection_views" />
    <Button
        android:id="@+id/init_startMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_background"
        android:backgroundTint="@color/primary_dark"
        android:padding="20dp"
        android:paddingStart="32dp"
...
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <GridLayout
        android:id="@+id/init_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:columnCount="1"
...
